[chore] use Optional to deal with nullpointerexception & adjust some syntax error.